div struktura siman

--- a/oop/indexOop.html
+++ b/oop/indexOop.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <script src="area.js"></script>
-    <script src="main.js"></script>
+    <script src="mainOop.js"></script>
 </body>
 </html>
