--- a/oop/indexOop.html
+++ b/oop/indexOop.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="creation.js"></script>
+    <script src="manager.js"></script>
     <script src="area.js"></script>
     <script src="mainOop.js"></script>
 </body>
